# monorepo

./: .gitignore  CONTRIBUTING.md  FRONTEND_BACKEND_CONNECTION.md  FRONTEND_BACKEND_DOCUMENTATION.md  README.md  SECURITY.md  clean-cache.sh  create-shared-package.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.sh  start-servers.sh  start-unified.sh  workspace.code-workspace
app/backend/: .gitignore
app/backend/backend/: schemas.py
app/backend/backend/routers/: category.py
app/backend/backend/schema/: category_schemas.py
app/backend/helper/: utils.py
app/backend/migrations/: env.py
app/frontend-app/: babel.config.js  global.d.ts  package.json  tsconfig.json
app/frontend-app/.maestro/: FavoritePodcast.yaml  Login.yaml
app/frontend-app/app/components/: Screen.tsx
app/frontend-app/app/i18n/: i18n.ts
app/frontend-app/app/screens/: ForgotPasswordScreen.tsx
app/shared-ui/: package.json
app/shared-ui/src/: utils.ts
apps/: test-connection.sh
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/backend/: app.py  database.py
apps/backend/backend/routers/: auth.py  users.py
apps/backend/helper/: utils.py
apps/backend/migrations/versions/: c72b6e88c64c_create_users_table.py
apps/frontend-app/: .eslintrc.js  README.md  app.json  babel.config.js  eas.json  index.tsx  metro.config.js  package-lock.json  package.json
apps/frontend-app/app/components/: ProfilePhotoUpload.tsx  Text.tsx  index.ts
apps/frontend-app/app/config/: config.dev.ts  config.prod.ts
apps/frontend-app/app/hooks/: useAuth.ts  (+1 more)
(+21 files in other folders)
